# cloudformation-templates

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  lint_requirements.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: precommit-install.sh  precommit-lint.sh  validate-templates.sh
.github/workflows/: build.yml  deploy.yml  pr-assign.yml  pr-lint.yaml
aurora/: CONTRIBUTING.md  README.md  SelectStarAurora.json  deploy.sh
aurora-postgresql/: CONTRIBUTING.md  README.md  SelectStarAuroraPostgreSQL.json  deploy.sh
aurora-postgresql/e2e/: README.md  main.tf  providers.tf
aurora-postgresql/terraform/: README.md  main.tf  outputs.tf  (+1 more)
das/: CONTRIBUTING.md  SelectStarDAS.yaml  SelectStarOracle.yaml  copy_handler.py  deploy.sh  update.py
das/das-firehose-log-process/: .gitignore  README.md  flake.nix  pyproject.toml  samples.txt
das/das-firehose-log-process/selectstar_das_processor/: handler.py
glue/: CONTRIBUTING.md  README.md  SelectStarGlue.json  deploy.sh
mysql/: CONTRIBUTING.md  README.md  SelectStarMySQL.json  deploy.sh
oracle/: CONTRIBUTING.md  README.md  SelectStarOracle.yaml  deploy.sh
quicksight/: CONTRIBUTING.md  README.md  SelectStarQuickSight.json  deploy.sh
rds-for-postgresql/: .gitignore  CONTRIBUTING.md  README.md  SelectStarRDS.json  copy_handler.py  deploy.sh  dev_requirements.txt  provision.py  requirements.txt  smoke.py  update.py
redshift/: CONTRIBUTING.md  README.md  SelectStarRedshift.json  deploy.sh  dev_requirements.txt  provision.py  requirements.txt  smoke.py  transform.py  update.py
(+48 files in other folders)
